fixed z-index problem in cards and images

--- a/Week06/Furkan_ERYILMAZ/static/style.css
+++ b/Week06/Furkan_ERYILMAZ/static/style.css
@@ -32,6 +32,11 @@ thead {
 
 .image-clone {
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 902;
 }
 
 img:not(.image-clone) {
@@ -46,7 +51,7 @@ img:not(.image-clone) {
 
 .card {
     position: relative;
-    z-index: 5;
+    z-index: 901;
 }
 
 .card:has(img)::after {
@@ -54,21 +59,22 @@ img:not(.image-clone) {
     margin: 1rem 0;
 }
 
-.card:has(img):hover .image-clone {
-    display: unset;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 6;
-}
-
-.col-md-4:has(.card:hover) > .background-overlay {
+.col-md-4:has(.card:hover) .background-overlay {
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.75);
-    z-index: 4;
+    z-index: 900;
+}
+
+.col-md-4:has(.image-clone:hover) .background-overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 900;
 }
